Fixed landscape layout and loading different images

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,9 @@
         android:theme="@style/Theme.Flixster">
         <activity
             android:name=".MainActivity"
-            android:configChanges="orientation|screenSize"
-            android:exported="true">
+            android:exported="true"
+            android:configChanges="orientation|screenLayout">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
